docs(1.1): create phase plan

--- a/.planning/phases/1.1-set-up-styling/1.1-01-PLAN.md
+++ b/.planning/phases/1.1-set-up-styling/1.1-01-PLAN.md
@@ -16,9 +16,9 @@ autonomous: true
 
 must_haves:
   truths:
-    - "Bulma CSS classes are available in Vue templates (e.g., .button, .navbar, .content)"
-    - "SCSS variables ($type-s-red, $spacing-md, etc.) are accessible in Vue SFC <style lang='scss' scoped> blocks"
-    - "Dark mode activates when data-theme='dark' is set on <html> element"
+    - "Bulma CSS classes are available in Vue templates (e.g., .button, .navbar, .content, .columns)"
+    - "SCSS variables ($type-s-red, $spacing-md, etc.) are accessible in Vue SFC <style lang='scss' scoped> blocks via vars.$ prefix"
+    - "Dark mode activates when data-theme='dark' is set on <html> element (warm neutral backgrounds, not blue-tinted)"
     - "Inter font is self-hosted (no external CDN requests in network tab)"
     - "Lucide icon components auto-import in Vue templates (e.g., <LucideSun />)"
   artifacts:
@@ -29,14 +29,14 @@ must_haves:
       provides: "Module registration, CSS entry, Vite SCSS config, colorMode config, fonts config"
       contains: "@nuxtjs/color-mode"
     - path: "app/assets/scss/_variables.scss"
-      provides: "Design tokens: colors, spacing, radii, shadows, transitions"
+      provides: "Design tokens: colors, spacing, radii, shadows, transitions, typography"
       contains: "$type-s-red"
     - path: "app/assets/scss/_bulma-overrides.scss"
-      provides: "Bulma variable overrides + modular component imports"
-      contains: "@use 'bulma/sass/utilities'"
+      provides: "Bulma variable overrides via @use ... with () and full Bulma import"
+      contains: "@use 'bulma/sass' with"
     - path: "app/assets/scss/_base.scss"
-      provides: "Global base styles: links, images, tap targets, theme transitions"
-      contains: "$type-s-red"
+      provides: "Global base styles: links, images, code blocks, tap targets, theme transitions"
+      contains: "var(--bulma-primary)"
     - path: "app/assets/scss/_dark-mode.scss"
       provides: "Warm neutral dark mode CSS variable overrides"
       contains: "data-theme"
@@ -52,6 +52,10 @@ must_haves:
       to: "app/assets/scss/_variables.scss"
       via: "vite.css.preprocessorOptions.scss.additionalData"
       pattern: "additionalData.*variables"
+    - from: "app/assets/scss/_bulma-overrides.scss"
+      to: "app/assets/scss/_variables.scss"
+      via: "@use './variables' as vars"
+      pattern: "@use.*variables"
     - from: "app/assets/scss/main.scss"
       to: "app/assets/scss/_bulma-overrides.scss"
       via: "@use './bulma-overrides'"
@@ -90,44 +94,42 @@ Output: Updated package.json and nuxt.config.ts, plus 5 SCSS files in app/assets
 **Step 1: Install dependencies.**
 
 ```bash
-yarn add bulma@1.0.4 sass @nuxtjs/color-mode @nuxt/fonts
-yarn add -D nuxt-lucide-icons
+yarn add bulma@1.0.4 @nuxtjs/color-mode @nuxt/fonts nuxt-lucide-icons
+yarn add -D sass
 ```
 
-`sass` and `bulma` are regular dependencies (used during `nuxi generate` build). `nuxt-lucide-icons` is devDependency.
+`bulma`, `@nuxtjs/color-mode`, `@nuxt/fonts`, and `nuxt-lucide-icons` are regular dependencies (used at runtime/build). `sass` is a devDependency (SCSS compiler, Vite uses it during build).
+
+Do NOT install nuxt-purgecss. Research found it has a Nuxt 4 compatibility issue (GitHub #203, Jul 2025, minimally maintained). Bundle size is not a concern at this stage.
 
 **Step 2: Update `nuxt.config.ts`.**
 
-Add new modules AFTER `@nuxt/eslint` (preserving the critical `@nuxtjs/seo` before `@nuxt/content` order):
+Add new modules AFTER `@nuxt/eslint`, preserving the critical `@nuxtjs/seo` before `@nuxt/content` order. Final module array:
 
 ```ts
-modules: ['@nuxtjs/seo', '@nuxt/content', '@nuxt/eslint', '@nuxtjs/color-mode', '@nuxt/fonts', 'nuxt-lucide-icons'],
+modules: [
+  '@nuxtjs/seo',         // MUST come before @nuxt/content (project constraint)
+  '@nuxt/content',       // Content system
+  '@nuxt/fonts',         // Font self-hosting (auto-detects Inter from CSS)
+  '@nuxtjs/color-mode',  // Dark mode toggle with localStorage persistence
+  'nuxt-lucide-icons',   // Icon auto-imports
+  '@nuxt/eslint',        // Linting (existing)
+],
 ```
 
-Add the following new config sections to nuxt.config.ts:
+Note: @nuxt/eslint moved to end of user-facing modules. This is fine -- it has no ordering constraint other than being present.
+
+Add these new config sections to nuxt.config.ts (add a brief comment before each):
 
 1. **CSS entry point:**
 ```ts
+// Global SCSS entry point (loads Bulma with overrides + custom styles)
 css: ['~/assets/scss/main.scss'],
 ```
 
-2. **Vite SCSS preprocessor** (injects variables into every Vue SFC `<style lang="scss">` block):
+2. **Color mode config** (critical: `dataValue: 'theme'` bridges @nuxtjs/color-mode with Bulma's `[data-theme=dark]` selector):
 ```ts
-vite: {
-  css: {
-    preprocessorOptions: {
-      scss: {
-        additionalData: '@use "~/assets/scss/variables" as *;',
-      },
-    },
-  },
-},
-```
-
-CRITICAL: `additionalData` must ONLY inject variables/mixins (not CSS rules). Using `@use ... as *` exposes all variables without namespace prefix.
-
-3. **Color mode config:**
-```ts
+// Dark mode: defaults to system preference, user can override via toggle
 colorMode: {
   preference: 'system',
   fallback: 'light',
@@ -138,10 +140,9 @@ colorMode: {
 },
 ```
 
-`dataValue: 'theme'` is the critical bridge -- it sets `data-theme="dark"` on `<html>`, which Bulma 1.x natively understands for dark mode CSS variable inversion.
-
-4. **Font config:**
+3. **Font config** (@nuxt/fonts auto-detects 'Inter' from the font-family in compiled CSS and self-hosts at build time via `/_fonts/`):
 ```ts
+// Inter font: auto-detected from CSS, downloaded at build time, served locally
 fonts: {
   defaults: {
     weights: [400, 500, 600, 700],
@@ -151,18 +152,31 @@ fonts: {
 },
 ```
 
-@nuxt/fonts auto-detects "Inter" from the font-family declaration in Bulma's utilities override and self-hosts it.
-
-5. **Lucide config:**
+4. **Lucide icons config:**
 ```ts
+// Lucide icons: auto-imported as <LucideSun />, <LucideMoon />, etc.
 lucide: {
   namePrefix: 'Lucide',
 },
 ```
 
-This enables auto-import of `<LucideSun />`, `<LucideMoon />`, etc.
+5. **Vite SCSS preprocessor** (injects variables into every Vue SFC `<style lang="scss">` block):
+```ts
+// Make SCSS design tokens available in all Vue SFC style blocks
+vite: {
+  css: {
+    preprocessorOptions: {
+      scss: {
+        additionalData: '@use "~/assets/scss/variables" as vars;',
+      },
+    },
+  },
+},
+```
 
-**Step 3: Add SCSS to lint-staged in package.json.**
+CRITICAL: `additionalData` injects this line at the top of every SCSS compilation. Only variables/mixins should be injected this way (not CSS rules, which would be duplicated in every component). Variables are then accessed as `vars.$type-s-red`, `vars.$spacing-md`, etc. in SFC `<style lang="scss" scoped>` blocks.
+
+**Step 3: Add `.scss` to lint-staged in package.json.**
 
 Update the second lint-staged pattern to include `.scss` files:
 
@@ -172,20 +186,19 @@ Update the second lint-staged pattern to include `.scss` files:
 ]
 ```
 
-**Important notes:**
-- Do NOT use nuxt-purgecss. Research found it has a Nuxt 4 compatibility issue (GitHub #203, Jul 2025, minimally maintained). The user's goal of reduced bundle size is achieved via Bulma modular SCSS imports in _bulma-overrides.scss instead.
-- Preserve all existing nuxt.config.ts settings (site, nitro, app, typescript, eslint, compatibilityDate).
+**Important:**
+- Preserve ALL existing nuxt.config.ts settings (site, nitro, app, typescript, eslint, compatibilityDate).
 - Add a brief comment before each new config section.
   </action>
   <verify>
-1. `yarn install` completes without errors (run it after package changes).
-2. `cat package.json | grep bulma` shows bulma in dependencies.
-3. `cat package.json | grep nuxt-lucide-icons` shows it in devDependencies.
-4. `cat nuxt.config.ts` shows all 6 modules in correct order, css array, vite config, colorMode config, fonts config, lucide config.
-5. `yarn dev` starts without errors (start it briefly, confirm no SCSS/module errors, then stop).
+1. `yarn install` completes without errors.
+2. Verify package.json has `bulma`, `@nuxtjs/color-mode`, `@nuxt/fonts`, `nuxt-lucide-icons` in dependencies and `sass` in devDependencies.
+3. Verify nuxt.config.ts has all 6 modules in order, css array, colorMode config (with `dataValue: 'theme'`), fonts config, lucide config, and vite preprocessorOptions.
+4. Verify lint-staged pattern includes `.scss`.
+5. `yarn dev` starts without module registration errors (it will fail on missing main.scss -- that is expected and resolved in Task 2).
   </verify>
   <done>
-All 5 packages installed. nuxt.config.ts has modules in correct order (seo > content > eslint > color-mode > fonts > lucide-icons), css entry pointing to main.scss, vite additionalData injecting variables, colorMode with dataValue 'theme', fonts with Inter weights, lucide with namePrefix. lint-staged includes .scss files.
+All 5 packages installed. nuxt.config.ts has modules in correct order (seo > content > fonts > color-mode > lucide-icons > eslint), css entry pointing to main.scss, colorMode with dataValue 'theme', fonts with Inter weights/subsets, lucide with namePrefix, and vite additionalData injecting variables as `vars` namespace. lint-staged includes .scss files.
   </done>
 </task>
 
@@ -203,98 +216,221 @@ Create the `app/assets/scss/` directory and all 5 SCSS files.
 
 **File 1: `_variables.scss`** -- Design tokens for DE5.org
 
-Define these SCSS variables (the project's design token system):
+Define these SCSS variables, each group preceded by a section comment:
 
-- **Brand colors:** `$type-s-red: #b81a35` (primary accent, used sparingly for links/buttons/hover)
-- **Dark mode surfaces:** `$dark-bg-base: #171717`, `$dark-bg-surface: #262626`, `$dark-bg-elevated: #333333` (warm neutrals, no blue undertone)
-- **Typography:** `$font-family-primary: 'Inter', 'SF Pro', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif`
-- **Spacing scale:** xs (0.25rem), sm (0.5rem), md (1rem), lg (1.5rem), xl (2rem), 2xl (3rem), 3xl (4rem)
-- **Border radius:** `$radius-default: 0.375rem`, `$radius-lg: 0.75rem`
-- **Shadows:** `$shadow-subtle: 0 1px 3px rgba(0, 0, 0, 0.08)`, `$shadow-card: 0 2px 8px rgba(0, 0, 0, 0.08)`
-- **Transitions:** `$transition-fast: 150ms ease`, `$transition-normal: 250ms ease`, `$transition-slow: 350ms ease`
+```scss
+// app/assets/scss/_variables.scss
+// Design tokens for DE5.org
 
-Add a section comment before each group.
+// -- Brand colors
+$type-s-red: #b81a35;
+// Alternate refs for Phase 8 review: #e82c2a (acura.com CSS), #E40521 (community)
 
-**File 2: `_bulma-overrides.scss`** -- Bulma variable overrides + modular imports
+// -- Dark mode surface colors (warm neutrals, no blue undertone)
+$dark-bg-base: #171717;        // hsl(0, 0%, 9%)
+$dark-bg-surface: #262626;     // hsl(0, 0%, 15%)
+$dark-bg-elevated: #333333;    // hsl(0, 0%, 20%)
 
-Use the modern Sass `@use ... with (...)` syntax (NOT `@import`). Vite 7 enforces modern Sass API.
+// -- Typography
+$font-family-primary: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans',
+  'Helvetica Neue', sans-serif;
 
-1. `@use './variables' as *` to load design tokens
-2. `@use 'bulma/sass/utilities' with (...)` to override:
-   - `$primary: $type-s-red`
-   - `$family-primary: $font-family-primary`
-   - `$radius: $radius-default`
-   - `$radius-small: 0.25rem`
-   - `$radius-large: $radius-lg`
-   - `$gap: 32px`
-   - `$block-spacing: 1.5rem`
-3. Then `@forward` only the Bulma modules actually needed (modular imports for bundle size):
-   - `bulma/sass/base` (reset + base styles)
-   - `bulma/sass/themes` (CSS variable theming including dark mode)
-   - `bulma/sass/grid/columns` (grid system)
-   - Elements: button, content, icon, image, tag, title, box, table
-   - Components: card, navbar, dropdown
-   - Form: `bulma/sass/form` (full form module)
-   - Layout: container, footer, hero, section
+// -- Spacing scale
+$spacing-xs: 0.25rem;    // 4px
+$spacing-sm: 0.5rem;     // 8px
+$spacing-md: 1rem;       // 16px
+$spacing-lg: 1.5rem;     // 24px
+$spacing-xl: 2rem;       // 32px
+$spacing-2xl: 3rem;      // 48px
+$spacing-3xl: 4rem;      // 64px
 
-This modular approach replaces the need for nuxt-purgecss -- only imported Bulma modules are included in the bundle.
+// -- Border radius
+$radius-default: 0.375rem;   // 6px
+$radius-lg: 0.75rem;         // 12px
 
-**File 3: `_base.scss`** -- Global base styles
+// -- Shadows
+$shadow-subtle: 0 1px 3px rgba(0, 0, 0, 0.08);
+$shadow-card: 0 2px 8px rgba(0, 0, 0, 0.08);
+$shadow-elevated: 0 8px 24px rgba(0, 0, 0, 0.12);
 
-1. `@use './variables' as *`
-2. **Link styling:** `a:not(.button):not(.navbar-item):not(.tag)` -- color `$type-s-red`, no underline, underline on hover, transition on color/text-decoration
-3. **Responsive images:** `img` -- `max-width: 100%`, `height: auto`
-4. **Touch-friendly tap targets:** `button, a, [role='button']` -- `min-height: 44px`, `min-width: 44px` (but use more targeted selectors to avoid affecting inline links -- apply min-height only to button elements and `.button` class, not all `a` tags)
-5. **Fixed navbar body padding:** `body` -- `padding-top: 3.25rem` (compensates for Bulma's `.is-fixed-top` navbar)
+// -- Transitions
+$transition-fast: 150ms ease;      // Hover states, button presses
+$transition-base: 250ms ease;      // Color changes, opacity, theme transitions
+$transition-slow: 350ms ease;      // Page transitions, larger layout shifts
 
-Do NOT add a global `*` transition rule for theme changes. Instead, let Bulma's CSS variables handle the transition naturally. A global transition on every element causes performance issues. If smooth dark mode transitions are desired, apply them selectively to `background-color` and `color` on `body` and key container elements only.
+// -- Layout
+$content-max-width: 1024px;
+```
+
+**File 2: `_bulma-overrides.scss`** -- Override Bulma defaults and import Bulma
+
+Use the modern Sass `@use ... with (...)` syntax (NOT deprecated `@import`). This is the ONLY place Bulma gets imported. All overrides MUST be in the single `@use` statement.
+
+```scss
+// app/assets/scss/_bulma-overrides.scss
+// Override Bulma defaults, then import full Bulma framework
+// Source: https://bulma.io/documentation/customize/with-sass/
+
+@use './variables' as vars;
+
+// Override Bulma's Sass variables BEFORE it compiles
+// All overrides must be in this single @use statement
+@use 'bulma/sass' with (
+  $primary: vars.$type-s-red,
+  $family-primary: vars.$font-family-primary,
+  $radius: vars.$radius-default,
+  $radius-small: 0.25rem,
+  $radius-large: vars.$radius-lg,
+  $scheme-h: 0,      // Warm neutral hue (default is 221 = blue)
+  $scheme-s: 0%      // Zero saturation for pure neutrals
+);
+```
+
+CRITICAL: `$scheme-h: 0` and `$scheme-s: 0%` eliminate Bulma's default blue undertone from ALL scheme-derived colors. This affects both light and dark modes -- light mode gets pure gray tones, dark mode gets warm neutral backgrounds.
+
+**File 3: `_base.scss`** -- Global base styles on top of Bulma's minireset
+
+```scss
+// app/assets/scss/_base.scss
+// Global base styles on top of Bulma's reset
+
+@use './variables' as vars;
+
+// -- Link styling: accent color, no underline, underline on hover
+a:not(.button):not(.navbar-item):not(.tag) {
+  color: var(--bulma-primary);
+  text-decoration: none;
+  transition: color vars.$transition-fast,
+              text-decoration-color vars.$transition-fast;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+// -- Responsive images: constrain to container
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+// -- Code blocks: basic monospace styling (no syntax highlighting per user decision)
+pre,
+code {
+  font-family: 'SF Mono', SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
+}
+
+pre {
+  padding: vars.$spacing-md;
+  border-radius: vars.$radius-default;
+  overflow-x: auto;
+}
+
+// -- Touch-friendly tap targets (44px minimum per WCAG)
+button,
+.button,
+[role='button'] {
+  min-height: 44px;
+}
+
+// -- Fixed navbar body offset (Bulma .is-fixed-top needs body padding)
+body {
+  padding-top: 3.25rem;
+}
+
+// -- Smooth color transitions for theme changes (selective, not global *)
+body {
+  transition: background-color vars.$transition-base,
+              color vars.$transition-base;
+}
+```
+
+Do NOT add a global `*` or `*, *::before, *::after` transition rule. That causes severe performance issues. The selective `body` transition is sufficient -- Bulma's CSS variables handle the rest via cascade.
 
 **File 4: `_dark-mode.scss`** -- Dark mode warm neutral overrides
 
-1. `@use './variables' as *`
-2. `[data-theme='dark']` selector:
-   - Override `--bulma-scheme-main: #{$dark-bg-base}` (#171717)
-   - Override `--bulma-scheme-main-bis: #{$dark-bg-surface}` (#262626)
-   - Override `--bulma-scheme-main-ter: #{$dark-bg-elevated}` (#333333)
-   - Override `--bulma-background: #{$dark-bg-surface}`
-   - Override `--bulma-border: rgba(255, 255, 255, 0.12)` (subtle light border in dark mode)
-   - Override `--bulma-shadow: 0 2px 8px rgba(0, 0, 0, 0.3)` (slightly stronger shadow in dark)
-3. Add comment explaining: Bulma 1.x inverts its CSS variables natively with `[data-theme=dark]`, but defaults to slightly blue-tinted darks. These overrides switch to warm neutrals per design decision.
+Bulma 1.x has built-in dark mode via `[data-theme=dark]` selector. Its default scheme uses `$scheme-h: 221` (blue tint). While we override at the Sass level in `_bulma-overrides.scss`, we also need CSS variable overrides for the dark theme to get exact warm neutral values.
+
+```scss
+// app/assets/scss/_dark-mode.scss
+// Override Bulma dark theme for warm neutral backgrounds
+// Default Bulma dark: $scheme-h: 221 (blue), $scheme-s: 14%
+// Target: #171717 = hsl(0, 0%, 9%), #262626 = hsl(0, 0%, 15%)
+
+@use './variables' as vars;
+
+// Dark theme warm neutral overrides
+// @nuxtjs/color-mode sets data-theme="dark" on <html> (via dataValue: 'theme')
+// Bulma reads [data-theme=dark] and inverts its CSS variables
+[data-theme='dark'] {
+  // Zero hue/saturation for warm neutral (no blue undertone)
+  --bulma-scheme-h: 0;
+  --bulma-scheme-s: 0%;
+
+  // Custom lightness values for warm neutral palette
+  --bulma-scheme-main-l: 9%;          // #171717 (page background)
+  --bulma-scheme-main-bis-l: 12%;     // slightly lighter surface
+  --bulma-scheme-main-ter-l: 15%;     // #262626 equivalent (card/elevated surfaces)
+  --bulma-background-l: 15%;          // #262626 for general backgrounds
+}
+
+// System preference fallback (for users who haven't toggled manually)
+// :not([data-theme='light']) ensures manual light override is respected
+@media (prefers-color-scheme: dark) {
+  :root:not([data-theme='light']) {
+    --bulma-scheme-h: 0;
+    --bulma-scheme-s: 0%;
+    --bulma-scheme-main-l: 9%;
+    --bulma-scheme-main-bis-l: 12%;
+    --bulma-scheme-main-ter-l: 15%;
+    --bulma-background-l: 15%;
+  }
+}
+```
 
 **File 5: `main.scss`** -- Entry point
 
 ```scss
+// app/assets/scss/main.scss
 // SCSS entry point for DE5.org
 // Loads Bulma (with overrides) first, then custom styles
+
+// Bulma framework with variable overrides
 @use './bulma-overrides';
+
+// Global base styles (links, images, code blocks, tap targets)
 @use './base';
+
+// Dark mode warm neutral overrides
 @use './dark-mode';
 ```
 
-That's it -- minimal entry file. The `css: ['~/assets/scss/main.scss']` in nuxt.config.ts loads this globally.
-
 **Important SCSS syntax notes:**
-- Use `@use` and `@forward` everywhere. Never `@import` (deprecated, Vite 7 errors).
-- Partials are prefixed with `_` (Sass convention) but referenced without the underscore in `@use` statements.
-- Each partial uses `@use './variables' as *` to access design tokens. The `as *` avoids namespace prefixes.
+- Use `@use` and `@forward` everywhere. NEVER use `@import` (deprecated in Dart Sass 1.80+, Vite 7 uses modern Sass API).
+- Partials are prefixed with `_` (Sass convention) but referenced WITHOUT the underscore in `@use` statements.
+- Each partial that needs design tokens uses `@use './variables' as vars` to access them.
+- In Vue SFC `<style lang="scss" scoped>` blocks, variables are accessed as `vars.$type-s-red` because the `additionalData` in nuxt.config.ts injects `@use "~/assets/scss/variables" as vars;`.
   </action>
   <verify>
-1. All 5 files exist in `app/assets/scss/`:
+1. All 5 files exist:
    ```bash
    ls app/assets/scss/
    ```
    Expected: `_base.scss`, `_bulma-overrides.scss`, `_dark-mode.scss`, `_variables.scss`, `main.scss`
 
-2. `yarn dev` starts without SCSS compilation errors. Check terminal output for any Sass warnings or errors.
+2. `yarn dev` starts without SCSS compilation errors. Check terminal output for any Sass warnings about `@import` deprecation (there should be NONE since we use `@use` exclusively).
 
-3. Verify `_variables.scss` contains `$type-s-red: #b81a35`.
+3. Open http://localhost:3000 -- page loads with Bulma styling applied (existing page will look different because Bulma's reset + base styles now apply).
 
-4. Verify `_bulma-overrides.scss` uses `@use 'bulma/sass/utilities' with (...)` syntax (not `@import`).
+4. Inspect `<html>` element in DevTools -- should have `data-theme` attribute (set by @nuxtjs/color-mode).
 
-5. Verify `main.scss` uses `@use` for all imports.
+5. Check Network tab -- no requests to fonts.googleapis.com or external CDNs (Inter should be self-hosted via `/_fonts/`). If Inter is NOT auto-detected, note this for Plan 02 to add explicit font config.
+
+6. `yarn check` passes (lint + format + typecheck).
   </verify>
   <done>
-Five SCSS files created with complete design token system, modular Bulma imports with variable overrides, base link/image/tap-target styles, warm neutral dark mode CSS variable overrides, and a minimal entry point. All files use modern `@use`/`@forward` syntax. `yarn dev` compiles without SCSS errors.
+Five SCSS files created: design tokens in _variables.scss, full Bulma import with $primary/$family-primary/$scheme-h/$scheme-s overrides in _bulma-overrides.scss, link/image/code/tap-target base styles in _base.scss, warm neutral dark mode CSS variable overrides in _dark-mode.scss, and minimal entry point in main.scss. All files use modern @use syntax. yarn dev compiles without SCSS errors and Bulma styles apply to the page.
   </done>
 </task>
 
@@ -302,18 +438,19 @@ Five SCSS files created with complete design token system, modular Bulma imports
 
 <verification>
 1. `yarn dev` starts without errors -- confirms packages installed, modules registered, SCSS compiles.
-2. Open http://localhost:3000 in browser -- page loads (may look unstyled since layout shell is Plan 02).
-3. Inspect `<html>` element -- should have `data-theme` attribute (set by @nuxtjs/color-mode).
+2. Open http://localhost:3000 -- page loads with Bulma base styling (reset, typography).
+3. Inspect `<html>` element -- has `data-theme` attribute (set by @nuxtjs/color-mode).
 4. Check Network tab -- no requests to fonts.googleapis.com (Inter self-hosted by @nuxt/fonts).
 5. `yarn check` passes (lint + format + typecheck).
 </verification>
 
 <success_criteria>
-- All 5 packages in package.json (bulma, sass, @nuxtjs/color-mode, @nuxt/fonts, nuxt-lucide-icons)
+- All 5 packages in package.json (bulma, @nuxtjs/color-mode, @nuxt/fonts, nuxt-lucide-icons as deps; sass as devDep)
 - nuxt.config.ts has 6 modules in correct order with all config sections
-- 5 SCSS files exist with correct @use/@forward syntax
-- `yarn dev` compiles without errors
-- `yarn check` passes
+- 5 SCSS files exist with correct @use syntax (no @import anywhere)
+- $scheme-h: 0 and $scheme-s: 0% set in both Sass override and CSS variable overrides
+- yarn dev compiles without SCSS errors or deprecation warnings
+- yarn check passes
 </success_criteria>
 
 <output>
