--- a/.planning/phases/1.1-set-up-styling/1.1-02-PLAN.md
+++ b/.planning/phases/1.1-set-up-styling/1.1-02-PLAN.md
@@ -21,6 +21,7 @@ must_haves:
     - "Homepage shows placeholder content styled with Bulma classes"
     - "Dark mode uses warm neutral backgrounds (#171717 base), not blue-tinted"
     - "Links use Type S red (#b81a35) color, no underline, underline on hover"
+    - "Inter font renders in page text (self-hosted, no external CDN requests)"
   artifacts:
     - path: "app/components/ThemeToggle.vue"
       provides: "Sun/moon dark mode toggle button using Lucide icons and useColorMode()"
@@ -29,7 +30,7 @@ must_haves:
       provides: "Bulma navbar layout with hamburger, ThemeToggle, main slot, footer"
       contains: "navbar"
     - path: "app/pages/index.vue"
-      provides: "Styled homepage placeholder with Bulma section/container/content classes"
+      provides: "Styled homepage placeholder with Bulma section/container/content/box classes"
       contains: "section"
   key_links:
     - from: "app/layouts/default.vue"
@@ -44,6 +45,10 @@ must_haves:
       to: "bulma navbar classes"
       via: "Bulma CSS class usage"
       pattern: "navbar"
+    - from: "app/pages/index.vue"
+      to: "bulma layout classes"
+      via: "Bulma CSS class usage"
+      pattern: "section.*container"
 ---
 
 <objective>
@@ -80,33 +85,68 @@ Output: ThemeToggle.vue component, updated default.vue layout, updated index.vue
   <action>
 Create `app/components/ThemeToggle.vue` -- a sun/moon toggle button for the navbar.
 
-**Template (Pug):**
-- A `<button>` with class `theme-toggle`, type `button`
-- `@click="toggle"` handler
-- `:aria-label` that says "Switch to light mode" when dark, "Switch to dark mode" when light
-- Show `<LucideSun>` when `colorMode.value === 'dark'` (sun icon to indicate "click for light")
-- Show `<LucideMoon>` when light (moon icon to indicate "click for dark")
-- Icon size: 20
+**Template (`<template lang="pug">`):**
+```pug
+//- Dark mode toggle button
+button.theme-toggle(
+  @click="toggle"
+  :aria-label="isDark ? 'Switch to light mode' : 'Switch to dark mode'"
+  type="button"
+)
+  //- Sun icon in dark mode (click to go light), moon icon in light mode (click to go dark)
+  LucideSun(v-if="isDark" :size="20")
+  LucideMoon(v-else :size="20")
+```
 
 **Script (`<script setup lang="ts">`):**
-- `const colorMode = useColorMode()` (auto-imported by @nuxtjs/color-mode)
-- `const toggle = ()` that sets `colorMode.preference` to the opposite: `colorMode.value === 'dark' ? 'light' : 'dark'`
+```ts
+// Dark mode toggle using @nuxtjs/color-mode
+const colorMode = useColorMode()
+
+// Reactive dark mode state
+const isDark = computed(() => colorMode.value === 'dark')
+
+// Toggle between light and dark
+const toggle = () => {
+  colorMode.preference = colorMode.value === 'dark' ? 'light' : 'dark'
+}
+```
+
+`useColorMode()` is auto-imported by @nuxtjs/color-mode module. `LucideSun` and `LucideMoon` are auto-imported by nuxt-lucide-icons.
 
 **Style (`<style lang="scss" scoped>`):**
-- `.theme-toggle`: no background, no border, cursor pointer, padding `$spacing-sm`, color inherit, flex center, min-width/min-height 44px (touch target), border-radius `$radius-default`, transition background-color `$transition-fast`
-- Hover: `background-color: rgba(128, 128, 128, 0.1)`
+```scss
+// Toggle button -- minimal, accessible, touch-friendly
+.theme-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: vars.$spacing-sm;
+  color: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 44px;
+  min-height: 44px;
+  border-radius: vars.$radius-default;
+  transition: background-color vars.$transition-fast;
 
-SCSS variables ($spacing-sm, $radius-default, $transition-fast) are available via the `additionalData` injection configured in Plan 01.
+  &:hover {
+    background-color: rgba(128, 128, 128, 0.1);
+  }
+}
+```
 
-LucideSun and LucideMoon are auto-imported by nuxt-lucide-icons (no manual import needed).
+SCSS variables (`vars.$spacing-sm`, `vars.$radius-default`, `vars.$transition-fast`) are available via the `additionalData` injection configured in Plan 01. They use the `vars.` namespace prefix.
   </action>
   <verify>
 1. File exists: `ls app/components/ThemeToggle.vue`
 2. Contains `useColorMode` (script), `LucideSun`/`LucideMoon` (template), `theme-toggle` (style)
 3. Uses `<template lang="pug">`, `<script setup lang="ts">`, `<style lang="scss" scoped>`
+4. SCSS variables use `vars.$` prefix (not bare `$`)
   </verify>
   <done>
-ThemeToggle.vue created with sun/moon icon toggle, useColorMode() integration, accessible aria-label, 44px touch target, and scoped SCSS styles using design token variables.
+ThemeToggle.vue created with sun/moon icon toggle, useColorMode() integration, computed isDark state, accessible aria-label, 44px touch target, and scoped SCSS styles using vars.$ design token variables.
   </done>
 </task>
 
@@ -116,13 +156,14 @@ ThemeToggle.vue created with sun/moon icon toggle, useColorMode() integration, a
   <action>
 **File 1: Replace `app/layouts/default.vue`** with Bulma-styled layout shell.
 
-**Template (Pug):**
-```
+**Template (`<template lang="pug">`):**
+```pug
 div
-  //- Site navigation
+  //- Site navigation bar (fixed to top)
   nav.navbar.is-fixed-top(role="navigation" aria-label="main navigation")
     .container
       .navbar-brand
+        //- Site name link
         NuxtLink.navbar-item.has-text-weight-bold(to="/") DE5.org
         //- Mobile hamburger toggle
         a.navbar-burger(
@@ -136,12 +177,14 @@ div
           span(aria-hidden="true")
           span(aria-hidden="true")
           span(aria-hidden="true")
+      //- Collapsible navbar menu
       .navbar-menu(:class="{ 'is-active': menuOpen }")
         .navbar-end
+          //- Dark mode toggle
           .navbar-item
             ThemeToggle
 
-  //- Page content
+  //- Page content (slot for page components)
   main
     slot
 
@@ -156,34 +199,32 @@ div
 // Mobile menu toggle state
 const menuOpen = ref(false)
 
-// Close mobile menu when route changes
+// Close mobile menu when route changes (prevents menu staying open after navigation)
 const route = useRoute()
 watch(() => route.path, () => {
   menuOpen.value = false
 })
 ```
 
-The `watch` on route.path closes the hamburger menu when navigating to a new page.
-
-**Key details:**
-- `.is-fixed-top` on navbar -- requires `body { padding-top: 3.25rem }` (handled in _base.scss from Plan 01)
-- Bulma navbar needs 4 `<span>` elements inside `.navbar-burger` (Bulma 1.x requirement for the hamburger icon)
-- `ThemeToggle` auto-imports from `app/components/`
+**Key layout details:**
+- `.is-fixed-top` on navbar -- `body { padding-top: 3.25rem }` in _base.scss compensates for this
+- Bulma 1.x navbar needs exactly 4 `<span>` elements inside `.navbar-burger` for the hamburger icon lines
+- `ThemeToggle` auto-imports from `app/components/` (Nuxt convention)
 - No scoped style block needed -- this layout uses only Bulma utility classes
+- The `main` element has no Bulma classes -- individual pages add their own `.section > .container` structure for layout flexibility
 
-**File 2: Update `app/pages/index.vue`** with Bulma-styled placeholder.
+**File 2: Replace `app/pages/index.vue`** with Bulma-styled placeholder.
 
-Replace the current bare-bones homepage with a styled placeholder that demonstrates the styling system is working:
-
-**Template (Pug):**
-```
+**Template (`<template lang="pug">`):**
+```pug
+//- Homepage with styled placeholder content
 section.section
   .container
     //- Page heading
     h1.title DE5.org
     h2.subtitle Community knowledge hub for Acura Integra Type S (DE5) owners
 
-    //- Styled content block to verify .content class and markdown styling
+    //- Content block demonstrating Bulma .content auto-styling
     .content
       p.
         Curated FAQs, maintenance guides, and community knowledge
@@ -191,7 +232,7 @@ section.section
       p
         em Coming soon — curated FAQs, search, and community knowledge.
 
-    //- Sample cards to verify card/surface styling
+    //- Sample cards demonstrating Bulma box/columns styling
     .columns.is-multiline
       .column.is-one-third
         .box
@@ -207,10 +248,21 @@ section.section
           p Knowledge from forums and owners.
 ```
 
-**Script:**
-Keep the existing `useHead({ title: 'Home' })` call.
+**Script (`<script setup lang="ts">`):**
+Keep the existing `useHead({ title: 'Home' })` call. Add a comment:
+```ts
+// Homepage metadata
+useHead({
+  title: 'Home',
+})
+```
 
-The `.section > .container` pattern gives Bulma's default max-width and padding. The `.content` class shows how rendered markdown will look. The `.box` cards verify card/surface styling (subtle borders + rounded corners from Bulma defaults + our radius override).
+**Why this placeholder content:**
+- `.section > .container` verifies Bulma's max-width and padding
+- `.title` / `.subtitle` verifies typography hierarchy and Inter font
+- `.content` verifies the auto-styling class that will wrap Nuxt Content rendered markdown
+- `.columns > .column > .box` verifies card/surface styling (subtle borders + rounded corners)
+- All three card boxes demonstrate responsive column stacking on mobile
   </action>
   <verify>
 1. `cat app/layouts/default.vue` shows Bulma navbar with `.is-fixed-top`, hamburger with 4 spans, ThemeToggle in navbar-end, footer with `.footer` class.
@@ -219,70 +271,84 @@ The `.section > .container` pattern gives Bulma's default max-width and padding.
 4. Opening http://localhost:3000 shows a styled page with navbar, content, cards, and footer.
   </verify>
   <done>
-default.vue has Bulma navbar with fixed-top positioning, site name link, hamburger toggle for mobile, ThemeToggle in navbar-end, route-change menu close, main slot, and styled footer. index.vue has section/container layout, title/subtitle, content block, and 3-column card grid demonstrating box styling.
+default.vue has Bulma navbar with fixed-top positioning, site name link, hamburger toggle for mobile, ThemeToggle in navbar-end, route-change menu close, main slot, and styled footer. index.vue has section/container layout, title/subtitle, content block, and 3-column card grid demonstrating box styling. Both use Pug templates and existing page metadata preserved.
   </done>
 </task>
 
 <task type="checkpoint:human-verify" gate="blocking">
+  <name>Task 3: Visual verification of complete styling infrastructure</name>
+  <files>n/a</files>
+  <action>
+User visually verifies the complete styling infrastructure across layout, dark mode, typography, responsiveness, and self-hosted fonts.
+  </action>
   <what-built>
-Complete styling infrastructure: Bulma CSS framework with modular imports, SCSS design tokens, dark mode with warm neutral backgrounds, Inter font (self-hosted), Lucide icons, responsive navbar with hamburger menu, dark mode toggle, and styled homepage placeholder.
+Complete styling infrastructure: Bulma CSS framework with SCSS overrides, design tokens, dark mode with warm neutral backgrounds, Inter font (self-hosted), Lucide icons, responsive navbar with hamburger menu, dark mode toggle, and styled homepage placeholder.
   </what-built>
   <how-to-verify>
-Start the dev server: `yarn dev`
+Start the dev server if not already running: `yarn dev`
 
 Open http://localhost:3000 in your browser and verify:
 
 **1. Layout Shell**
-- [ ] Navbar is fixed to the top of the page with "DE5.org" brand link on the left
+- [ ] Navbar is fixed to the top with "DE5.org" text on the left
 - [ ] Dark mode toggle icon (sun or moon) is visible in the navbar on the right
-- [ ] Footer shows copyright with current year at the bottom of the page
-- [ ] Content is centered with readable max-width
+- [ ] Footer shows "(c) 2026 DE5.org -- For Acura Integra Type S (DE5) owners" at the bottom
+- [ ] Content is centered with readable max-width (not stretching full browser width)
 
 **2. Dark Mode**
 - [ ] Click the sun/moon icon -- page toggles between light and dark mode
-- [ ] Dark mode has warm neutral backgrounds (dark gray, not blue-tinted)
-- [ ] Refresh the page -- dark mode preference persists
-- [ ] Links use Type S red (#b81a35) accent color in both modes
+- [ ] Dark mode has warm neutral backgrounds (dark charcoal gray, NOT blue/slate-tinted)
+- [ ] Refresh the page -- dark mode preference persists (still dark after reload)
+- [ ] Toggle back to light -- clean white/light background
 
-**3. Typography**
-- [ ] Text renders in Inter font (check computed style in devtools if unsure)
-- [ ] Headlines are bold with clear size hierarchy (title > subtitle > body)
+**3. Typography and Colors**
+- [ ] Text renders in Inter font (check DevTools > Computed > font-family if unsure)
+- [ ] Headlines ("DE5.org", "Community knowledge hub...") are bold with clear size difference
+- [ ] Any links use red accent color (#b81a35), not default blue
 
 **4. Cards/Surfaces**
 - [ ] Three placeholder cards ("FAQs", "Guides", "Community") are visible
-- [ ] Cards have subtle borders and rounded corners
+- [ ] Cards have subtle borders and rounded corners (Bulma .box styling)
 
 **5. Responsive (Mobile)**
-- [ ] Resize browser to mobile width (~375px)
-- [ ] Hamburger icon appears, navbar items collapse
+- [ ] Resize browser to mobile width (~375px) or use DevTools responsive mode
+- [ ] Hamburger icon (three lines) appears, right-side menu items disappear
 - [ ] Click hamburger -- menu expands showing the theme toggle
-- [ ] Cards stack vertically on mobile
+- [ ] Cards stack vertically (one per row) on mobile
+- [ ] Click hamburger again -- menu collapses
 
-**6. Network**
-- [ ] Open DevTools > Network tab, refresh
-- [ ] No requests to fonts.googleapis.com or external CDNs (Inter is self-hosted)
+**6. Self-Hosted Fonts (Network)**
+- [ ] Open DevTools > Network tab, refresh the page
+- [ ] Look for font requests -- they should go to `/_fonts/` (local), NOT fonts.googleapis.com
+- [ ] If you see NO font requests at all, the fonts may be cached -- check in Incognito/Private window
+
+If @nuxt/fonts did not auto-detect Inter (fonts loading from external CDN or not loading at all), note this -- we may need to add explicit font config.
   </how-to-verify>
+  <verify>User confirms all 6 verification sections pass.</verify>
+  <done>User approves the visual checkpoint, confirming styling infrastructure is complete and correct.</done>
   <resume-signal>Type "approved" if everything looks good, or describe any issues to fix.</resume-signal>
 </task>
 
 </tasks>
 
 <verification>
-1. `yarn dev` starts without errors.
+1. `yarn dev` starts without errors (no SCSS compilation errors, no module errors).
 2. `yarn check` passes (lint + format + typecheck).
-3. Homepage renders with Bulma navbar, styled content, and footer.
-4. Dark mode toggle works and persists.
-5. Mobile responsive: hamburger menu works, content stacks.
-6. No external font CDN requests.
+3. Homepage renders with Bulma navbar, styled content, cards, and footer.
+4. Dark mode toggle works (click toggles, persists across refresh).
+5. Mobile responsive: hamburger menu works, content stacks vertically.
+6. No external font CDN requests in Network tab.
+7. User approves visual checkpoint.
 </verification>
 
 <success_criteria>
-- ThemeToggle.vue toggles dark/light mode using useColorMode()
-- default.vue has Bulma navbar with hamburger, ThemeToggle, and footer
+- ThemeToggle.vue toggles dark/light mode using useColorMode() with Lucide sun/moon icons
+- default.vue has Bulma navbar with fixed-top, hamburger, ThemeToggle, and footer
 - index.vue shows styled placeholder with Bulma section/container/content/box classes
-- Dark mode uses warm neutral backgrounds (#171717)
-- Inter font renders from local self-hosted source
+- Dark mode uses warm neutral backgrounds (#171717 base), not blue-tinted
+- Inter font renders from self-hosted source (/_fonts/ path, no external CDN)
 - Responsive layout works (hamburger on mobile, stacked cards)
+- Links use Type S red (#b81a35) accent color
 - User approves visual checkpoint
 </success_criteria>
 
